--- a/.github/workflows/native-build.yml
+++ b/.github/workflows/native-build.yml
@@ -4,10 +4,39 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-11]
+
+    runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew compileKotlinLibui
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+
+      - name: Install JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: Install MSYS2
+        if: matrix.os == 'windows-latest'
+        uses: msys2/setup-msys2@v2
+        with:
+          update: true
+          install: >-
+            mingw-w64-x86_64-toolchain
+            mingw-w64-i686-toolchain
+      - name: Export MSYS2_ROOT
+        if: matrix.os == 'windows-latest'
+        run: echo "MSYS2_ROOT=$(msys2 -c 'cygpath -m /')" >> $env:GITHUB_ENV
+
+      - name: Install GTK
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev
+
+      - name: Build
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: build --scan
