--- a/.github/workflows/native-build.yml
+++ b/.github/workflows/native-build.yml
@@ -14,11 +14,11 @@ jobs:
       - name: Checkout the repo
         uses: actions/checkout@v2
 
-      - name: Install JDK
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
+    - name: Install JDK 17
+      uses: actions/setup-java@v2
+      with:
+        distribution: temurin
+        java-version: 17
 
       - name: Install MSYS2
         if: matrix.os == 'windows-latest'
@@ -36,7 +36,5 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev
 
-      - name: Build
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: build --scan
+      - name: Build with Gradle
+        run: ./gradlew build
