--- a/.github/workflows/native-build.yml
+++ b/.github/workflows/native-build.yml
@@ -40,4 +40,4 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build --scan
