--- a/.github/workflows/native-build.yml
+++ b/.github/workflows/native-build.yml
@@ -20,18 +20,6 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Install MSYS2
-        if: matrix.os == 'windows-latest'
-        uses: msys2/setup-msys2@v2
-        with:
-          update: true
-          install: >-
-            mingw-w64-x86_64-toolchain
-            mingw-w64-i686-toolchain
-      - name: Export MSYS2_ROOT
-        if: matrix.os == 'windows-latest'
-        run: echo "MSYS2_ROOT=$(msys2 -c 'cygpath -m /')" >> $env:GITHUB_ENV
-
       - name: Install GTK
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev
@@ -40,4 +28,4 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build --scan
+        run: ./gradlew build
