--- a/.github/workflows/native-build.yml
+++ b/.github/workflows/native-build.yml
@@ -19,6 +19,10 @@ jobs:
           distribution: temurin
           java-version: 17
 
+      - name: Install GTK
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
